# esfwee

./: .gitignore  Cargo.toml  README.md  flake.nix
Esfwee/: bruno.json
Esfwee/Manga/: Delete manga.bru  Get Chapters.bru  Get Single.bru  Get page.bru  ListAllManga.bru  UploadManga.bru  folder.bru
esfwee/: Makefile  app.json  codegen.ts  package-lock.json  package.json  schema.json
esfwee/__generated__/: graphql.ts
esfwee/app/: _layout.tsx  search.tsx
esfwee/app/(auth)/: anilist-auth.tsx  login.tsx
esfwee/app/(tabs)/: _layout.tsx  index.tsx  read.tsx  settings.tsx  upload.tsx
esfwee/app/manga/: [id].tsx  _layout.tsx
esfwee/app/manga/[id]/: chapters.tsx  download.tsx
esfwee/components/: MangaCard.tsx  MangaSection.tsx  Reader.tsx  ReaderSettings.tsx  SearchBar.tsx
esfwee/components/ui/: icon-symbol.tsx
esfwee/constants/: theme.ts
esfwee/context/: apollo-context.tsx  auth-context.tsx  esfwee.tsx  reader-settings.tsx  theme-context.tsx
esfwee/lib/: anilist-queries.ts  anilist.ts  esfwee-api.ts
migrations/: 20251123200419_create_base_table.sql
src/: anilist.rs  handlers.rs  kv.rs  lib.rs  main.rs
src/api/: manga.rs  mod.rs  pirate.rs  s3.rs
src/arrrrr/: mod.rs
src/db/: mod.rs
src/storage/: kv.rs
