[package]
name = "esfwee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"]}
axum-test = "18.2.1"
bincode = "2.0.1"
chrono = "0.4.42"
dotenv = "0.15.0"
env = "1.0.1"
hex = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"

tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
uuid = { version = "1.18.1", features = ["serde"]}
